# Cpp_Embedded_AI

./: CMakeLists.txt  README.md
include/: CMakeLists.txt  ai.hpp  layer.hpp
src/: ai.cpp  layer.cpp  main.cpp
test/: test.cpp
